--- a/dev_Fiters.html
+++ b/dev_Fiters.html
@@ -1,16 +1,16 @@
 <html>
   <head>
     <title>Todo App</title>
-    <!-- <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'> -->
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">    
+    <link rel="stylesheet" href="css_Fiters.css" type="text/css" charset="utf-8">    
+    <script type="text/javascript" src="js_Fiters.js"></script>
   </head>
   <body>
     <div class="container">
       <p>
-        <label for="new-task">Add Item</label><input id="new-task" type="text"><button>Add</button>
+        <label for="new-task">Ajouter une nouvelle liste</label><input id="new-task" type="text"><button>Add</button>
       </p>
       
-      <h3>Todo</h3>
+      <h3>Listes</h3>
       <ul id="incomplete-tasks">
         <li><input type="checkbox"><label>Pay Bills</label><input type="text"><button class="edit">Edit</button><button class="delete">Delete</button></li>
         <li class="editMode"><input type="checkbox"><label>Go Shopping</label><input type="text" value="Go Shopping"><button class="edit">Edit</button><button class="delete">Delete</button></li>
