--- a/dev_Fiters.html
+++ b/dev_Fiters.html
@@ -12,7 +12,7 @@
       <h3>Listes</h3>
       <ul id="incomplete-tasks">
         <li><input type="checkbox"><label>Courses</label><input type="text"><button class="edit">Modifier</button><button class="delete">Supprimer </button></li>
-        <li class="editMode"><input type="checkbox"><label>Tache ménagère</label><input type="text" value="Go Shopping"><button class="edit">Modifier</button><button class="delete">Supprimer</button></li>
+        <li></li><input type="checkbox"><label>Tache ménagère</label><input type="text" value="Go Shopping"><button class="edit">Modifier</button><button class="delete">Supprimer</button></li>
         
       </ul>
       
