--- a/dev_Fiters.html
+++ b/dev_Fiters.html
@@ -11,8 +11,8 @@
       
       <h3>Listes</h3>
       <ul id="incomplete-tasks">
-        <li><input><label>Courses</label><input type="text"><button class="edit">Modifier</button><button class="delete">Supprimer </button></li>
-        <li><input><label>Tache ménagères</label><input type="text"><button class="edit">Modifier</button><button class="delete">Supprimer </button></li>        
+        <li><input type="checkbox"><label>Courses</label><input type="text"><button class="edit">Modifier</button><button class="delete">Supprimer </button></li>
+        <li><input type="checkbox"><label>Tache ménagères</label><input type="text"><button class="edit">Modifier</button><button class="delete">Supprimer </button></li>        
       </ul>
       
       <h3>List completées</h3>
