--- a/dev_Fiters.html
+++ b/dev_Fiters.html
@@ -24,3 +24,18 @@
   </body>
 </html>
 
+<div class="col-lg-4">
+  <img src="img/contact.PNG" alt="Generic placeholder image" width="200" height="60">
+  <h2>Contacter</h2>
+  <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+  <!--<p><a class="btn btn-secondary" href="nous_contacter.php" role="button" >↓ Formulaire de contact ↓</a></p>-->
+  <p><button class="button" data-modal="modalOne">↓ Formulaire de contact ↓</button></p>
+</div>  
+<div id="modalOne" class="modal">
+  <div class="modal-content">
+      <div class="contact-form">
+      <a class="close">&times;</a>
+      <?php include "nous_contacter.php" ?>
+      </div>
+  </div>
+</div>          
