--- a/dev_Fiters.html
+++ b/dev_Fiters.html
@@ -19,7 +19,7 @@
       <ul id="completed-tasks">
       </ul>
     </div>
-
+    <p><button class="button" data-modal="modalOne">↓ Formulaire de contact ↓</button></p>
     <div id="modalOne" class="modal">
       <div class="modal-content">
           <div class="contact-form">
