--- a/dev_Fiters.html
+++ b/dev_Fiters.html
@@ -21,12 +21,13 @@
     </div>
     <p><button class="button" data-modal="modalOne">↓ Formulaire de contact ↓</button></p>
     <div id="modalOne" class="modal">
-      <div class="modal-content">
-          <div class="contact-form">
-          <a class="close">&times;</a>
-          <?php include "cartes_Fiters.php" ?>
-          </div>
-      </div>
+                                <div class="modal-content">
+                                    <div class="contact-form">
+                                    <a class="close">&times;</a>
+                                    <?php include "nous_contacter.php" ?>
+                                    </div>
+                                </div>
+                            </div>   
   </div>     
   <script>
       var modalBtns = [...document.querySelectorAll(".button")];
